--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "file": "^0.2.2",
+    "file-url": "^4.0.0",
+    "meta-url": "^1.0.4",
     "socket.io": "^4.6.2",
     "web-audio-api": "^0.2.2",
+    "web-worker": "^1.2.0",
     "yt-converter": "^1.3.3"
   }
 }
