--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "socket.io": "^4.6.2",
     "web-audio-api": "^0.2.2",
     "web-worker": "^1.2.0",
-    "yt-converter": "^1.3.3"
+    "yt-converter": "^1.3.3",
+    "ytdl-core": "^4.11.4"
   }
 }
