--- a/jumpscarefinder/package.json
+++ b/jumpscarefinder/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-player": "^2.12.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.4"
